refactor(api): separate user route
